bugfix gs-moving z-index

--- a/gridstrap.scss
+++ b/gridstrap.scss
@@ -41,6 +41,9 @@ $gridstrap-columns: 12 !default;
 			z-index: 10;
 		}
 		&.gs-moving{
+			z-index: 20;
+		}
+		&.gs-moving-parent{
 			z-index: 15;
 		}
 		&.gs-moving,
@@ -82,7 +85,7 @@ $gridstrap-columns: 12 !default;
 			color: #2c3e50;
 			background-color: #fff;
             border:1px dashed rgba(93, 93, 93, 0.50);
-			overflow: visisble;
+			overflow: visible;
 			
 			&:hover{
 
